--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -1,9 +1,9 @@
 
 // Body
-$body-bg: #f8fafc;
+$body-bg: #f8f6ff;
 
 // Typography
-$font-family-sans-serif: "Nunito", sans-serif;
+$font-family-sans-serif: "questrial", sans-serif;
 $font-size-base: 0.9rem;
 $line-height-base: 1.6;
 
