--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,4 +1,20 @@
-@import url(https://fonts.googleapis.com/css?family=Nunito);/*!
+@import url(https://fonts.googleapis.com/css?family=Nunito);#foot {
+  height: 180px;
+  max-width: 100%;
+  margin-bottom: 0%;
+}
+
+html body {
+  margin: 0;
+  padding: 0;
+}
+
+#copyright {
+  font-size: 26px;
+  margin-top: 140px;
+}
+
+/*!
  * Bootstrap v4.1.3 (https://getbootstrap.com/)
  * Copyright 2011-2018 The Bootstrap Authors
  * Copyright 2011-2018 Twitter, Inc.
