--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -18,3 +18,20 @@ $yellow: #ffed4a;
 $green: #38c172;
 $teal: #4dc0b5;
 $cyan: #6cb2eb;
+
+
+#foot{
+    height:180px;
+    max-width: 100%;
+    margin-bottom: 0%;
+}
+
+html body {
+    margin: 0;
+    padding: 0;
+}
+
+#copyright{
+    font-size: 26px;
+    margin-top: 140px;
+}
