--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -20,11 +20,11 @@ $teal: #4dc0b5;
 $cyan: #6cb2eb;
 
 
-#foot{
-    height:180px;
-    max-width: 100%;
-    margin-bottom: 0%;
-}
+// #foot{
+//     height:180px;
+//     max-width: 100%;
+//     margin-bottom: 0%;
+// }
 
 html body {
     margin: 0;
@@ -33,5 +33,5 @@ html body {
 
 #copyright{
     font-size: 26px;
-    margin-top: 140px;
+   text-align: center;
 }
