--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -20,11 +20,10 @@ $teal: #4dc0b5;
 $cyan: #6cb2eb;
 
 
-// #foot{
-//     height:180px;
-//     max-width: 100%;
-//     margin-bottom: 0%;
-// }
+#foot{
+  background-color: #89caff;
+  height: 170px;
+}
 
 html body {
     margin: 0;
