--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,5 +1,5 @@
 @import url(https://fonts.googleapis.com/css?family=Nunito);#foot {
-  background-color: #89caff;
+  background-color: #00000027;
   height: 170px;
 }
 
