--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -22,7 +22,7 @@ $cyan: #6cb2eb;
 
 #foot{
   background-color: #7c7c7c75;
-  height: 170px;
+  height: 140px;
 }
 
 html body {
@@ -39,6 +39,11 @@ html body {
     font-size: 26px;
    text-align: center;
 }
+
+#contact{
+    float: right;
+//     margin-top: 40px;
+ }
 
 #product{
     margin-left: 40px;
