--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,4 +1,5 @@
-@import url(https://fonts.googleapis.com/css?family=Nunito);#foot {
+@import url(https://fonts.googleapis.com/css?family=Nunito);
+#foot {
   background-color: #7c7c7c75;
   height: 140px;
 }
