--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,6 +1,10 @@
-@import url(https://fonts.googleapis.com/css?family=Nunito);#foot {
-  background-color: #7c7c7c75;
-  height: 140px;
+@import url(https://fonts.googleapis.com/css?family=Nunito);#header-button {
+  font-size: 18px;
+  text-align: center;
+}
+
+#foot {
+  background-color: #8484ff75;
 }
 
 html body {
@@ -14,12 +18,13 @@ html body {
 }
 
 #copyright {
-  font-size: 26px;
+  font-size: 20px;
   text-align: center;
 }
 
 #contact {
   float: right;
+  margin-right: 100px;
 }
 
 #product {
@@ -39,6 +44,43 @@ html body {
 
 #paginate {
   margin-top: 30px;
+}
+
+#return-to-top {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  background: black;
+  background: rgba(0, 0, 0, 0.7);
+  width: 50px;
+  height: 50px;
+  display: block;
+  text-decoration: none;
+  border-radius: 35px;
+  display: none;
+  -webkit-transition: all 0.3s linear;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+}
+
+#return-to-top i {
+  color: #fff;
+  margin: 0;
+  position: relative;
+  left: 16px;
+  top: 13px;
+  font-size: 19px;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+}
+
+#return-to-top:hover {
+  background: rgba(0, 0, 0, 0.9);
+}
+
+#return-to-top:hover i {
+  color: #fff;
+  top: 5px;
 }
 
 /*!
