--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -20,9 +20,15 @@ $teal: #4dc0b5;
 $cyan: #6cb2eb;
 
 
+
+#header-button {
+    font-size: 18px;
+   text-align: center;
+}
+
 #foot{
-  background-color: #7c7c7c75;
-  height: 140px;
+  background-color: #8484ff75;
+//   height: 140px;
 }
 
 html body {
@@ -36,13 +42,13 @@ html body {
 }
 
 #copyright{
-    font-size: 26px;
+    font-size: 20px;
    text-align: center;
 }
 
 #contact{
     float: right;
-//     margin-top: 40px;
+    margin-right: 100px;
  }
 
 #product{
@@ -66,3 +72,44 @@ html body {
     
 }
 
+
+  #return-to-top {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    background: rgb(0, 0, 0);
+    background: rgba(0, 0, 0, 0.7);
+    width: 50px;
+    height: 50px;
+    display: block;
+    text-decoration: none;
+    -webkit-border-radius: 35px;
+    -moz-border-radius: 35px;
+    border-radius: 35px;
+    display: none;
+    -webkit-transition: all 0.3s linear;
+    -moz-transition: all 0.3s ease;
+    -ms-transition: all 0.3s ease;
+    -o-transition: all 0.3s ease;
+    transition: all 0.3s ease;
+}
+#return-to-top i {
+    color: #fff;
+    margin: 0;
+    position: relative;
+    left: 16px;
+    top: 13px;
+    font-size: 19px;
+    -webkit-transition: all 0.3s ease;
+    -moz-transition: all 0.3s ease;
+    -ms-transition: all 0.3s ease;
+    -o-transition: all 0.3s ease;
+    transition: all 0.3s ease;
+}
+#return-to-top:hover {
+    background: rgba(0, 0, 0, 0.9);
+}
+#return-to-top:hover i {
+    color: #fff;
+    top: 5px;
+}
