--- a/public/css/app.css
+++ b/public/css/app.css
@@ -8,6 +8,14 @@
   text-align: center;
 }
 
+.feedback_okay {
+  color:green;
+}
+
+.feedback_warning {
+  color:red;
+}
+
 #cart-logo {
   font-size: 32px;
   color: #6574cd;
