--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,4 +1,10 @@
-@import url(https://fonts.googleapis.com/css?family=Nunito);html body {
+@import url(https://fonts.googleapis.com/css?family=Nunito);
+html,
+{
+  min-height: 100%;
+
+} body {
+  min-height:100%;
   margin: 0;
   padding: 0;
 }
