--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -25,6 +25,10 @@ html body {
     padding: 0;
 }
 
+#header2 {
+
+    font-size: 20px;
+}
 #header-button {
     font-size: 18px;
    text-align: center;
@@ -41,7 +45,7 @@ html body {
 }
 
 #foot{
-  background-color: #8484ff75;
+//   background-color: #8484ff75;
 //   height: 140px;
 }
 
@@ -56,11 +60,14 @@ html body {
 #copyright{
     font-size: 20px;
    text-align: center;
+   
+  margin-bottom: -40px;
 }
 
 #contact{
     float: right;
     margin-right: 100px;
+    margin-bottom: 4px;
  }
 
 #product{
@@ -125,3 +132,36 @@ html body {
     color: #fff;
     top: 5px;
 }
+
+/* Use a media query to add a break point at 800px: */
+@media screen and (max-width:500px) { 
+
+#header {
+
+    font-size: 24px;
+}
+
+#header2 {
+
+    font-size: 13px;
+}
+
+
+#contact{
+    
+   
+    margin-bottom: 10px;
+ }
+
+ #copyright{
+    margin-bottom: 44px;
+    
+   
+ }
+ 
+}
+
+    
+
+
+
